--- a/.github/workflows/tp03.yml
+++ b/.github/workflows/tp03.yml
@@ -1,12 +1,5 @@
 name: CI devops 2022 CPE auto-deployment
-on: 
-  repository_dispatch:
-    types: [on-demand-deployment]
-  push:
-    branches: 
-      - main
-      - develop
-    pull_request:
+on: workflow_dispatch
 
 jobs:
   playbook_ansible:
